Finished the ConfigLoaderTest,